test working directory

--- a/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-mintenance-jenkinsagents-recreate.yml
@@ -51,8 +51,6 @@ stages:
         echo "Executing ... az devops login"
         echo $(System.AccessToken) | az devops login
         git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" ${TF_REPOSITORY}
-        pwd
-        ls -lat
       displayName: "Clone Terraform repository"
     
     - task: AzureCLI@2
@@ -75,10 +73,9 @@ stages:
           [ -f ~/.ssh/id_rsa.pub ] || az keyvault secret download --name poc-pub-key --vault-name ${VAULT_NAME} --file ~/.ssh/id_rsa.pub
           [ -f ~/.ssh/known_hosts ] || az keyvault secret download --name poc-keyscan --vault-name ${VAULT_NAME} --file ~/.ssh/known_hosts
           chmod 600 ~/.ssh/id_rsa
-          echo  '$(System.DefaultWorkingDirectory)'
         
     - task: AzureCLI@2
-      displayName: "Run Terraform" 
+      displayName: "Recreate DPLT Jenkins Agent" 
       env:
         ARM_CLIENT_ID: $(terraform-app-client-id)
         ARM_CLIENT_SECRET: $(terraform-app-secret)
@@ -93,10 +90,30 @@ stages:
           set -o errexit  # Exit on error
           set -o nounset  # Exit on uninitalized vars
           set -o pipefail # Exit on pipe exec fail
-          pwd
-          ls -lat
           cd $(System.DefaultWorkingDirectory)/nm-factory-inf-env-dev/200-jenkins-agent-dplt-dev
           echo "terraform init"
           terraform init
           echo "terraform plan"
           terraform plan --replace=azurerm_linux_virtual_machine_scale_set.jenkins-agent
+
+    - task: AzureCLI@2
+      displayName: "Recreate DPRO Jenkins Agent" 
+      env:
+        ARM_CLIENT_ID: $(terraform-app-client-id)
+        ARM_CLIENT_SECRET: $(terraform-app-secret)
+        ARM_TENANT_ID: "9e296acd-1e44-44f0-8c77-cc9dbce85489"  #Must move to KeyValut or inside provider.tf
+      inputs:
+        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
+        scriptType: 'bash'
+        scriptLocation: 'inlineScript'
+        inlineScript: |
+          #!/bin/bash
+
+          set -o errexit  # Exit on error
+          set -o nounset  # Exit on uninitalized vars
+          set -o pipefail # Exit on pipe exec fail
+          cd $(System.DefaultWorkingDirectory)/nm-factory-inf-env-dev/200-jenkins-agent-dpro-dev
+          echo "terraform init"
+          terraform init
+          echo "terraform plan"
+          terraform plan --replace=azurerm_linux_virtual_machine_scale_set.jenkins-agent          
