--- a/Okta/nm-factory-inf-pip-operation-okta-create-user.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-create-user.yml
@@ -41,7 +41,7 @@ stages:
         RunAsPreJob: true
 
     - bash: |
-        curl --show-error --silent --fail -X POST \
+        curl --show-error --fail -X POST \
         -H "Accept: application/json" \
         -H "Content-Type: application/json" \
         -H "Authorization: SSWS ${OKTA_TOKEN}" \
