--- a/Okta/nm-factory-inf-pip-operation-okta-create-user.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-create-user.yml
@@ -40,19 +40,23 @@ stages:
         SecretsFilter: 'okta-token'
         RunAsPreJob: true
 
-    - bash: |
-        curl --fail --silent -o /dev/null -w '{"http_code": "%{http_code}"}' -X POST \
-        -H "Accept: application/json" \
-        -H "Content-Type: application/json" \
-        -H "Authorization: SSWS ${OKTA_TOKEN}" \
-        -d '{
-          "profile": {
-            "firstName": "'"${{parameters.firstName}}"'",
-            "lastName": "'"${{parameters.lastName}}"'",
-            "email": "'"${{parameters.email}}"'",
-            "login": "'"${{parameters.login}}"'"
-          }
-        }' "https://${{parameters.oktaDomain}}/api/v1/users?activate=false" | jq -s '.[-1] * .[-2]' | jq "{ http_code: .http_code, id: .id, status: .status, errorSummary: .errorSummary }"
-      env:
-        OKTA_TOKEN: $(okta-token)
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        failOnStderr: true
+        env:
+          OKTA_TOKEN: $(okta-token)
+        script: |
+          curl --fail --silent -o /dev/null -w '{"http_code": "%{http_code}"}' -X POST \
+          -H "Accept: application/json" \
+          -H "Content-Type: application/json" \
+          -H "Authorization: SSWS ${OKTA_TOKEN}" \
+          -d '{
+            "profile": {
+              "firstName": "'"${{parameters.firstName}}"'",
+              "lastName": "'"${{parameters.lastName}}"'",
+              "email": "'"${{parameters.email}}"'",
+              "login": "'"${{parameters.login}}"'"
+            }
+          }' "https://${{parameters.oktaDomain}}/api/v1/users?activate=false" | jq -s "{ http_code: .http_code, id: .id, status: .status, errorSummary: .errorSummary }"
 
