--- a/Okta/nm-factory-inf-pip-operation-okta-create-user.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-create-user.yml
@@ -45,7 +45,7 @@ stages:
         targetType: 'inline'
         failOnStderr: true
         script: |
-          curl --fail --silent -o /dev/null -w '{"http_code": "%{http_code}"}' -X POST \
+          curl --fail --silent --show-error -o /dev/null -w '{"http_code": "%{http_code}"}' -X POST \
           -H "Accept: application/json" \
           -H "Content-Type: application/json" \
           -H "Authorization: SSWS ${OKTA_TOKEN}" \
