--- a/Okta/nm-factory-inf-pip-operation-okta-create-user.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-create-user.yml
@@ -45,7 +45,7 @@ stages:
         targetType: 'inline'
         failOnStderr: true
         script: |
-          curl -w '{"http_code": "%{http_code}"}' -X POST \
+          curl -o /dev/null -w '{"http_code": "%{http_code}"}' -X POST \
           -H "Accept: application/json" \
           -H "Content-Type: application/json" \
           -H "Authorization: SSWS ${OKTA_TOKEN}" \
@@ -56,7 +56,7 @@ stages:
               "email": "'"${{parameters.email}}"'",
               "login": "'"${{parameters.login}}"'"
             }
-          }' "https://${{parameters.oktaDomain}}/api/v1/users?activate=false" | jq 
+          }' "https://${{parameters.oktaDomain}}/api/v1/users?activate=false" | jq -s '.[-1] * .[-2]' | jq "{ http_code: .http_code, id: .id, status: .status, errorSummary: .errorSummary }"
       env:
         OKTA_TOKEN: $(okta-token)
 
