Updated bash task.

--- a/Okta/nm-factory-inf-pip-operation-okta-create-user.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-create-user.yml
@@ -56,7 +56,8 @@ stages:
               "email": "'"${{parameters.email}}"'",
               "login": "'"${{parameters.login}}"'"
             }
-          }' "https://${{parameters.oktaDomain}}/api/v1/users?activate=false" | jq
+          }' "https://${{parameters.oktaDomain}}/api/v1/users?activate=false" jq -s '.[-1] * .[-2]' | jq "{ http_code: .http_code, id: .id, status: .status, errorSummary: .errorSummary }"
       env:
         OKTA_TOKEN: $(okta-token)
+
 
