--- a/Okta/nm-factory-inf-pip-operation-okta-create-user.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-create-user.yml
@@ -45,7 +45,7 @@ stages:
         targetType: 'inline'
         failOnStderr: true
         script: |
-          curl --no-progress-meter -w '{"http_code": "%{http_code}"}' -X POST \
+          curl --no-progress-meter --fail -w '{"http_code": "%{http_code}"}' -X POST \
           -H "Accept: application/json" \
           -H "Content-Type: application/json" \
           -H "Authorization: SSWS ${OKTA_TOKEN}" \
@@ -58,15 +58,6 @@ stages:
             }
           }' "https://${{parameters.oktaDomain}}/api/v1/users?activate=false" | jq -s '.[-1] * .[-2]' | jq "{ http_code: .http_code, id: .id, status: .status, errorSummary: .errorSummary, errorCauses: .errorCauses }" > resp.json
 
-          cat resp.json
-
-          if [[ $(($(jq .http_code resp.json))) -ge 400 ]]; then
-            echo "Operation Failed"
-            exit -1
-          else
-            echo "Operation Successfull"
-            exit 0
-          fi
       env:
         OKTA_TOKEN: $(okta-token)
 
