Updated bash task.

--- a/Okta/nm-factory-inf-pip-operation-okta-create-user.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-create-user.yml
@@ -59,9 +59,9 @@ stages:
           }' "https://${{parameters.oktaDomain}}/api/v1/users?activate=false" | jq -s '.[-1] * .[-2]' | jq "{ http_code: .http_code, id: .id, status: .status, errorSummary: .errorSummary, errorCauses: .errorCauses }" > resp.json
 
           cat resp.json
-          http_code=$(jq .http_code resp.json)
+          http_code=$(jq .http_code resp.json | tr -d '"') 
 
-          if [[ $(($http_code)) -ge 400 ]]; then
+          if [[ $http_code -ge 400 ]]; then
             echo "Operation Failed"
             exit -1
           else
