--- a/Okta/nm-factory-inf-pip-operation-okta-delete-user.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-delete-user.yml
@@ -1,4 +1,4 @@
-name: nm-factory-inf-pip-operation-okta-create-user
+name: nm-factory-inf-pip-operation-okta-delete-user
 
 trigger: none # will disable CI builds entirely
  
@@ -16,9 +16,9 @@ parameters:
   default: "iam-nm-dev-dplt-admin.okta.com"
 
 stages:
-- stage: create_okta_user
+- stage: delete_okta_user
   jobs:
-  - job: create_okta_user
+  - job: delete_okta_user
     steps:
     - task: AzureKeyVault@2
       displayName: 'Azure Key Vault: ecl-az-fact-kvt-01-main'
@@ -34,14 +34,14 @@ stages:
         failOnStderr: true
         script: |
           echo "Getting user id for ${{parameters.email}}."
-          curl GET --no-progress-meter -w '{"http_code": "%{http_code}"}' \
+          curl --no-progress-meter -w '{"http_code": "%{http_code}"}' GET \
           -H "Accept: application/json" \
           -H "Content-Type: application/json" \
           -H "Authorization: SSWS ${OKTA_TOKEN}" \
           "https://${{parameters.oktaDomain}}/api/v1/users/${{parameters.email}}" | jq -s '.[-1] * .[-2]' | jq "{ http_code: .http_code, id: .id, status: .status, errorSummary: .errorSummary, errorCauses: .errorCauses }" > resp_get.json
 
-          echo "ID: ${user_id}"
           user_id=$(jq ".id" resp_get.json | tr -d '"')
+          echo "ID: ${user_id}"
 
           if [ ${#user_id} -eq 4 ]; then
               echo "User email ${{parameters.email}} not found in OKTA"
