Updated bash task.

--- a/Okta/nm-factory-inf-pip-operation-okta-delete-user.yml
+++ b/Okta/nm-factory-inf-pip-operation-okta-delete-user.yml
@@ -11,7 +11,7 @@ parameters:
   type: string
 
 - name: action
-  displayName: Email
+  displayName: Action
   type: string
   default: Deprovision
   values:
