change to main branch

--- a/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
@@ -10,7 +10,7 @@ schedules:
   displayName: Nightly recreate DPLT Jenkins Agent
   branches:
     include:
-    - jenkins-agents
+    - main
   always: true
 
 variables:
