--- a/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
@@ -22,9 +22,6 @@ resources:
   - repository: nm-factory-inf-env-pro
     type: git
     name: ecl-ado-prj-iac/nm-factory-inf-env-pro
-  - repository: nm-factory-inf-mod-naming
-    type: git
-    name: ecl-ado-prj-iac/nm-factory-inf-mod-naming
 
 stages:
 - stage: recreate_jenkins_agent_vm 
@@ -44,14 +41,16 @@ stages:
       inputs:
         terraformVersion: 1.3.0
 
-    - script: |
-        echo "Cloning Terraform repository"
-        echo "az config"
-        az config set extension.use_dynamic_install=yes_without_prompt
-        echo "Executing ... az devops login"
-        echo $(System.AccessToken) | az devops login
-        git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" ${TF_REPOSITORY}
-      displayName: "Clone Terraform repository"
+    - checkout: nm-factory-inf-env-pro
+
+    # - script: |
+    #     echo "Cloning Terraform repository"
+    #     echo "az config"
+    #     az config set extension.use_dynamic_install=yes_without_prompt
+    #     echo "Executing ... az devops login"
+    #     echo $(System.AccessToken) | az devops login
+    #     git clone -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" ${TF_REPOSITORY}
+    #   displayName: "Clone Terraform repository"
     
     - task: AzureCLI@2
       displayName: "Install SSH keys"
@@ -93,5 +92,5 @@ stages:
           cd $(System.DefaultWorkingDirectory)/nm-factory-inf-env-pro/200-jenkins-agent-dplt
           echo "terraform init"
           terraform init
-          echo "terraform apply -auto-approve --replace=azurerm_linux_virtual_machine_scale_set.jenkins-agent"
-          terraform apply -auto-approve --replace=azurerm_linux_virtual_machine_scale_set.jenkins-agent
+          echo "terraform plan --replace=azurerm_linux_virtual_machine_scale_set.jenkins-agent"
+          terraform plan --replace=azurerm_linux_virtual_machine_scale_set.jenkins-agent
