--- a/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
+++ b/Maintenance/nm-factory-inf-pip-operation-maintenance-dplt-jenkinsagent-recreate.yml
@@ -42,6 +42,7 @@ stages:
         terraformVersion: 1.3.0
 
     - checkout: nm-factory-inf-env-pro
+      path: nm-factory-inf-env-pro
 
     # - script: |
     #     echo "Cloning Terraform repository"
@@ -89,7 +90,11 @@ stages:
           set -o errexit  # Exit on error
           set -o nounset  # Exit on uninitalized vars
           set -o pipefail # Exit on pipe exec fail
-          cd $(System.DefaultWorkingDirectory)/.git/nm-factory-inf-env-pro/200-jenkins-agent-dplt
+
+          cd $(System.DefaultWorkingDirectory)
+          ls -l
+
+          cd $(System.DefaultWorkingDirectory)/nm-factory-inf-env-pro/200-jenkins-agent-dplt
           echo "terraform init"
           terraform init
           echo "terraform plan --replace=azurerm_linux_virtual_machine_scale_set.jenkins-agent"
