--- a/backup-azure-repos/azure-pipeline-repos-all.yml
+++ b/backup-azure-repos/azure-pipeline-repos-all.yml
@@ -18,7 +18,7 @@ schedules:
   displayName: Nightly backup
   branches:
     include:
-    - backup-all-gitRepos
+    - main
   always: true
 
 jobs:
