--- a/adding-azure-user/testing_pipeline.yml
+++ b/adding-azure-user/testing_pipeline.yml
@@ -133,7 +133,8 @@ jobs:
       echo "Commit and push new branch to remote repository"
       git add *
       git commit -m "Performed the actions requested at ticket ${{ parameters.branch }}"
-      git -c http.extraHeader="Authorization: bearer $(System.AccessToken)" push origin $BRANCHTARGET
+      B64_PAT=$(printf ":$(System.AccessToken)" | base64)
+      git push -c http.extraHeader="Authorization: Basic ${B64_PAT}" push origin $BRANCHTARGET
     displayName: "Clone repository to modify and push new branch"
 
   - script: |
