feat(Azure-user-creation): Removed the conversion of the system token to base64 and using authorization bearer at push

--- a/adding-azure-user/testing_pipeline.yml
+++ b/adding-azure-user/testing_pipeline.yml
@@ -143,8 +143,7 @@ jobs:
       git commit -m "Performed the actions requested at ticket ${{ parameters.branch }}"
 
       echo "Push the new branch to remote repository"
-      B64_PAT=$(printf ":$(System.AccessToken)" | base64)
-      git -c http.extraHeader="Authorization: Basic ${B64_PAT}" push origin $BRANCHTARGET
+      git -c http.extraHeader="Authorization: bearer $(System.AccessToken)" push origin $BRANCHTARGET
     displayName: "Clone repository to modify and push new branch"
 
   - script: |
