feat(Azure-user-creation): Removed the configuration for the user before pushing to test

--- a/adding-azure-user/testing_pipeline.yml
+++ b/adding-azure-user/testing_pipeline.yml
@@ -134,9 +134,9 @@ jobs:
         ;;
       esac
 
-      echo "Configure user for the push action"
-      git config --global user.email "naiaragarcia@paradigmadigital.com"
-      git config --global user.name "Naiara Garcia"
+#      echo "Configure user for the push action"
+#      git config --global user.email "naiaragarcia@paradigmadigital.com"
+#      git config --global user.name "Naiara Garcia"
 
       echo "Commit new branch to remote repository"
       git add *
