--- a/adding-azure-user/adding-user-to-azure.yml
+++ b/adding-azure-user/adding-user-to-azure.yml
@@ -53,33 +53,34 @@ jobs:
     value: "naiaragarcia@paradigmadigital.com adrianmartin@paradigmadigital.com fgiuliano@paradigmadigital.com hgomez@paradigmadigital.com jespinosa@paradigmadigital.com jhernantes@paradigmadigital.com kcardena@paradigmadigital.com madiaz@paradigmadigital.com"
   - name: DESCRIPTION
     value:
-    - ## What does this PR do?
-    - This PR is to add/remove users indicated at ticket ${{ parameters.branch }}
-    -
-    - ## Why is it necessary?
-    - Because the users need this access to perform his daily job.
-    -
-    - ## Pull request type
-    - - [ ] Bugfix
-    - - [ ] New feature
-    - - [X] IaC change
-    - - [ ] Add new alert
-    - - [ ] Alert modification
-    -
-    - ## Related ticket
-    - ${{ parameters.branch }}
-    - Close or affect [this](https://jira.eurocontrol.int/browse/${{ parameters.branch }}) ticket.
-    -
-    - ## CI Output
-    - 
-    - N/A
-    -
-    - ## Checks
-    - 
-    - - [ ] The PR has a descriptive title
-    - - [ ] The changes section has been checked
-    - - [ ] A person has been assigned to this PR
-    - - [ ] Clear comments `<-- -->` from sections
+    - "## What does this PR do?"
+    - "This PR is to add/remove users indicated at ticket ${{ parameters.branch }}"
+    - ""
+    - "## Why is it necessary?"
+    - "Because the users need this access to perform his daily job."
+    - ""
+    - "## Pull request type"
+    - "- [ ] Bugfix"
+    - "- [ ] New feature"
+    - "- [X] IaC change"
+    - "- [ ] Add new alert"
+    - "- [ ] Alert modification"
+    - ""
+    - "## Related ticket"
+    - "${{ parameters.branch }}"
+    - ""
+    - "Close or affect [this](https://jira.eurocontrol.int/browse/${{ parameters.branch }}) ticket."
+    - ""
+    - "## CI Output"
+    - ""
+    - "N/A"
+    - ""
+    - "## Checks"
+    - ""
+    - "- [ ] The PR has a descriptive title"
+    - "- [ ] The changes section has been checked"
+    - "- [ ] A person has been assigned to this PR"
+    - "- [ ] Clear comments `<-- -->` from sections"  
 
   steps:
   - script: |
